<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"

                android:text="@string/my_profile"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/avatar_profile_vector"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="Gopi Kumar" />

            <TextView
                android:id="@+id/tv_mob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="9279316994" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_profile">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvPointEarnedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/point_earned"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvWalletBalanceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/wallet_balance"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="0dp"
                    android:layout_height="59dp"
                    android:layout_marginStart="75dp"
                    android:layout_marginEnd="75dp"
                    android:layout_toStartOf="@id/tvWalletBalanceLabel"
                    android:layout_toEndOf="@id/tvPointEarnedLabel"
                    android:background="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/tvPointEarnedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPointEarnedLabel"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@id/separator"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvWalletBalanceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvWalletBalanceLabel"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/separator"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/saved_address"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_wallet" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:maxLines="3"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_title"
            tools:text="H2 Block, A wing, MS Ramaiah North City, Manayata Tech Park, Nagavara, Bengaluru, Karnataka 560045" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/orange"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>